# leti-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.override.yml.example  docker-compose.yml  leti-ai  openlet-ai
crates/leti-adapters/: Cargo.toml
crates/leti-adapters/migrations/: 0001_init.sql  0004_session_extensions.sql  0006_session_agent_profile.sql  0007_session_depth.sql  0009_session_read_observations.sql  0011_structural_legacy_control_cleanup.sql  0013_background_task_delivery_leases.sql  0015_subagent_executions.sql  0016_subagent_inbox_messages.sql  0017_session_interaction_mode.sql
crates/leti-adapters/src/: lib.rs  util.rs
crates/leti-adapters/tests/: artifact_store_caps_and_dedup.rs  bus_replay_and_lag.rs  common_helpers_smoke.rs  config_perm_accept_atomicity.rs  emushell_builtins.rs  emushell_dos_guards.rs  emushell_interpreter.rs  emushell_parity.rs  emushell_python_builtin.rs  localfs_artifact_store.rs  localfs_path_traversal.rs  localfs_read_size_caps.rs  localshell_security_corners.rs  localshell_tests.rs  localshell_timeout_kill_group.rs  openai_decoder_malformed.rs  openai_http_error_mapping.rs  openai_list_models.rs  openai_network_faults.rs  openai_parity.rs  openrouter_request_enrichment.rs  permission_matcher_tests.rs  prefix_shaping_body_cap.rs  pyexec_executor.rs  secret_redactor_patterns.rs  session_log.rs  sqlite_memory_store.rs  sqlite_seq_race.rs  sqlite_soft_delete_contract.rs  sse_parser_chunk_fuzz.rs
crates/leti-plugin-api/: Cargo.toml
crates/leti-plugin-api/src/: context.rs  dispatch.rs  hooks.rs  lib.rs  plugin.rs  prelude.rs
crates/leti-plugin-api/tests/: capability_gates.rs  dispatch.rs  dispatch_sites.rs
crates/leti-plugin-registry/: Cargo.toml
crates/leti-plugin-registry/src/: lib.rs
crates/leti-plugin-registry/tests/: install_edge_cases.rs
crates/leti-plugins/core-agents/: Cargo.toml
crates/leti-plugins/test-quota-stub/: Cargo.toml
crates/leti-server/: Cargo.toml
crates/leti-server/src/: adapter_stack.rs  app_state.rs  app_state_builder.rs  audit.rs  boot.rs  cli.rs  core_api_impl.rs  detached_permission.rs  diagnostics.rs  doctor_cmd.rs  error.rs  events.rs  evidence_scrubber.rs  injected_turn.rs  lib.rs  main.rs  mention.rs  metrics.rs  notif_bucket.rs  openapi.rs  permission_seed.rs  router.rs  shutdown.rs  subagent_driver.rs  subagent_spawner.rs  turn_driver.rs  turn_slot.rs
crates/leti-server/tests/: app_error_from_impl_mapping.rs  attachments_route_test.rs  auth_middleware_gate.rs  cancel_test.rs  core_api_smoke.rs  diagnostics_route_test.rs  end_to_end_plugin_determinism.rs  files_route_test.rs  integration_smoke.rs  live_e2e_ask_user.rs  live_e2e_compaction_continuity.rs  live_e2e_cost_usage.rs  live_e2e_cross_file_refactor.rs  live_e2e_debug_fix_verify.rs  live_e2e_fs_agent_crud.rs  live_e2e_fs_write.rs  live_e2e_openrouter_gated.rs  live_e2e_plan_mode.rs  live_e2e_plugin_agent.rs  live_e2e_scaffold_discovery.rs  live_e2e_server_core.rs  live_e2e_session_persist.rs  live_e2e_subagent.rs  live_e2e_todo_workflow.rs  live_support.rs  models_route_test.rs  question_answer_test.rs  router_composability.rs  session_routes_test.rs  sse_resume_test.rs  subagent_e2e.rs  support.rs  telemetry_spans.rs  turn_queue_tests.rs  workspace_ownership.rs  workspace_resolver_traversal.rs  workspace_routing_test.rs
crates/openlet-adapters/: Cargo.toml  build.rs
crates/openlet-adapters/migrations/: 0005_session_capabilities.sql  0007_session_depth.sql  0008_session_model.sql  0010_runtime_reminder_deliveries.sql  0012_background_task_delivery_outbox.sql  0014_repair_legacy_compaction_control_cleanup.sql
crates/openlet-adapters/src/: lib.rs  model_match.rs  multi_provider.rs  stub_provider.rs  util.rs
crates/openlet-adapters/tests/: artifact_store_caps_and_dedup.rs  bus_replay_and_lag.rs  common_helpers_smoke.rs  config_perm_accept_atomicity.rs  emushell_builtins.rs  emushell_dos_guards.rs  emushell_interpreter.rs  emushell_parity.rs  emushell_python_builtin.rs  localfs_artifact_store.rs  localfs_path_traversal.rs  localfs_read_size_caps.rs  localshell_security_corners.rs  localshell_tests.rs  localshell_timeout_kill_group.rs  multi_provider_routing_runtime.rs  openai_compat_decoder_malformed.rs  openai_compat_http_error_mapping.rs  openai_compat_list_models.rs  openai_compat_network_faults.rs  openai_compat_parity.rs  openai_decoder_malformed.rs  openai_http_error_mapping.rs  openai_list_models.rs  openai_network_faults.rs  openai_parity.rs  openrouter_request_enrichment.rs  permission_matcher_tests.rs  prefix_shaping_body_cap.rs  pyexec_executor.rs  secret_redactor_patterns.rs  session_log.rs  sqlite_memory_store.rs  sqlite_seq_race.rs  sqlite_soft_delete_contract.rs  sse_parser_chunk_fuzz.rs
crates/openlet-core/: Cargo.toml
crates/openlet-core/src/: config.rs  dispatch.rs  error.rs  hooks.rs  lib.rs  projection.rs
crates/openlet-core/tests/: ask_user_tests.rs  attachments_payload_overflow.rs  attachments_security.rs  common_mocks_smoke.rs  compaction_autocontinue.rs  compaction_invariants.rs  compaction_trigger.rs  conversation_runtime_tests.rs  cost_monotonicity.rs  dispatch_runner_panic_isolation.rs  dispatcher_parallel_order.rs  dispatcher_pending_announces_ask.rs  dispatcher_tests.rs  doom_guard_state_machine.rs  filesystem_trait_tests.rs  hooked_event_sink_tests.rs  hooked_memory_store_tests.rs  injected_permission_tests.rs  per_session_model.rs  plan_mode_tools.rs  plugin_fault_observability.rs  processor_malformed_chunks.rs  processor_partial_stream_invariants.rs  processor_tests.rs  projection.rs  projection_compaction.rs  projection_round_trip.rs  promote_task_tests.rs  provider_retry_backoff.rs  question_registry_race.rs  read_before_write_tests.rs  runtime_reminder_projection.rs  send_message_tests.rs  send_message_tool_tests.rs  subagent_tests.rs  (+7 more)
crates/openlet-plugin-registry/: Cargo.toml
crates/openlet-protocol/: Cargo.toml
crates/openlet-server/: Cargo.toml
crates/openlet-test-mock-provider/: Cargo.toml
(+754 files in other folders)
