[workspace]
resolver = "3"
members = [
    "crates/openlet-core",
    "crates/openlet-adapters",
    "crates/openlet-protocol",
    "crates/openlet-plugin-api",
    "crates/openlet-plugin-registry",
    "crates/openlet-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
authors = ["Openlet"]
repository = "https://github.com/qninhdt/openlet-ai"
rust-version = "1.85"

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.40", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
bytes = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }

# OpenAPI / docs
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time / IDs
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Misc
dashmap = "6.1"
semver = { version = "1.0", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
    "macros",
    "json",
    "chrono",
    "uuid",
] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
dirs = "5.0"

# HTTP client (provider streaming, phase 3)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
blake3 = "1.5"

# Filesystem (phase 4 tools)
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
similar = "2.6"
tempfile = "3.10"

# Internal crates
openlet-core = { path = "crates/openlet-core" }
openlet-adapters = { path = "crates/openlet-adapters" }
openlet-protocol = { path = "crates/openlet-protocol" }
openlet-plugin-api = { path = "crates/openlet-plugin-api" }
openlet-plugin-registry = { path = "crates/openlet-plugin-registry" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
