[workspace]
resolver = "3"
members = [
    "crates/openlet-core",
    "crates/openlet-adapters",
    "crates/openlet-protocol",
    "crates/openlet-plugin-api",
    "crates/openlet-plugin-registry",
    "crates/openlet-plugins/core-agents",
    "crates/openlet-plugins/core-tools",
    "crates/openlet-plugins/test-quota-stub",
    "crates/openlet-server",
    "crates/openlet-test-mock-provider",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
authors = ["Openlet"]
repository = "https://github.com/qninhdt/openlet-ai"
# Monty (Python executor) requires Rust >= 1.95; the workspace toolchain is
# pinned to latest stable in rust-toolchain.toml. Keep MSRV at Monty's floor.
rust-version = "1.95"

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.40", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
bytes = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }

# OpenAPI / docs
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics (facade + Prometheus recorder). Emission via the `metrics`
# facade is a no-op until a recorder is installed, so the local binary
# carries metric call sites at zero cost and needs NO Prometheus/infra.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Errors
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time / IDs
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Misc
dashmap = "6.1"
dotenvy = "0.15"
semver = { version = "1.0", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
    "macros",
    "json",
    "chrono",
    "uuid",
] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
# HIR literal extraction for the cloud grep prefilter (Phase 6). We extract a
# PROVABLY-required literal set from the parsed regex tree — the library keeps
# the covering invariant (marks the Seq infinite/inexact when it can't safely
# enumerate), so we can never fabricate a false literal from a quantifier
# interior, an escape body, or a literal-less alternation branch. Pinned to
# match the `regex` crate's transitive version.
regex-syntax = "0.8"
dirs = "5.0"

# HTTP client (provider streaming, phase 3; S3 presigned GET for cloud fs)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
blake3 = "1.5"

# gRPC client for the cloud Filesystem impl (Phase 6). openlet-ai is a CLIENT
# of openlet file-service; the .proto is vendored under
# openlet-adapters/proto/ and codegen'd by tonic-build at build time. tls
# via rustls to match the reqwest/sqlx stack (no OpenSSL in the tree).
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }

# Filesystem (phase 4 tools)
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
similar = "2.6"

# Emulated shell interpreter (bash tool). tree-sitter parses bash into a
# CST; we hand-write the async eval loop that walks it. Pin tree-sitter-bash
# exact — a grammar bump can rename node kinds and silently break the walk
# (spike-verified in Phase 1). tree-sitter itself is API-stable at 0.26.
tree-sitter = "0.26"
tree-sitter-bash = "=0.25.1"

# Emulated python interpreter (python tool). Monty is pydantic's
# Agent-oriented Python interpreter: deny-by-default, IO through a single
# host-callback seam (`OsCall`), resource limits built in. Use the published
# release so the dependency source remains auditable by the supply-chain gate.
monty = "=0.0.19-beta.4"

# Prompt templating (Jinja2-style). Pinned exact: 2.0 is a from-scratch
# rewrite with a different API surface than 1.x; a minor bump could shift
# it again. Templates are embedded at compile time via include_str!.
tera = "=2.0.0"
tempfile = "3.10"
nix = { version = "0.29", default-features = false, features = ["signal"] }

# Test-only (workspace dev-dependencies)
rstest = { version = "0.23", default-features = false }
proptest = { version = "1.5", default-features = false, features = ["std"] }
wiremock = "0.6"

# Internal crates
openlet-core = { path = "crates/openlet-core" }
openlet-adapters = { path = "crates/openlet-adapters" }
openlet-protocol = { path = "crates/openlet-protocol" }
openlet-plugin-api = { path = "crates/openlet-plugin-api" }
openlet-plugin-registry = { path = "crates/openlet-plugin-registry" }
openlet-plugin-core-agents = { path = "crates/openlet-plugins/core-agents" }
openlet-plugin-core-tools = { path = "crates/openlet-plugins/core-tools" }
openlet-plugin-test-quota-stub = { path = "crates/openlet-plugins/test-quota-stub" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = "line-tables-only"     # was: full — biggest memory win
split-debuginfo = "unpacked"
