[package]
name = "openlet-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
dirs.workspace = true
futures.workspace = true
globset.workspace = true
hex.workspace = true
ignore.workspace = true
monty.workspace = true
openlet-core.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
regex-syntax.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "process", "io-util", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt", "io"] }
tonic.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
uuid.workspace = true
walkdir.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
openlet-test-mock-provider = { path = "../openlet-test-mock-provider" }
rstest.workspace = true
proptest.workspace = true
wiremock.workspace = true

[lints]
workspace = true
