[package]
name = "openlet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
rust_decimal.workspace = true
schemars.workspace = true
secrecy.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "fs", "process", "io-util"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
utoipa.workspace = true
walkdir.workspace = true
tracing.workspace = true
metrics.workspace = true
uuid.workspace = true

# Attachments pipeline (Phase 3). `image` re-exports a default-features
# decoder set; we trim to only the formats we accept on the upload route
# (PNG, JPEG, WebP, GIF) so we don't pull in TIFF/AVIF/etc.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# Pinned exact: pdf-extract has historically expanded its surface (and
# panic profile) silently between 0.7 patch releases. Bumping requires
# re-running the security review per F3.6.
pdf-extract = "=0.7.7"
# Content-based MIME sniffing for the multipart upload route. F3.5 — we
# never trust the client-supplied Content-Type.
infer = "0.16"
tera.workspace = true

[lints]
workspace = true

[dev-dependencies]
openlet-adapters = { path = "../openlet-adapters" }
rstest.workspace = true
proptest.workspace = true
metrics-util = "0.19"
