[package]
name = "openlet-plugin-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
openlet-core.workspace = true
openlet-plugin-api.workspace = true
openlet-plugin-core-agents.workspace = true
openlet-plugin-core-tools.workspace = true
semver.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[lints]
workspace = true
