[package]
name = "openlet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "openlet-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["json", "tokio", "http1", "http2", "macros", "query"] }
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
futures.workspace = true
openlet-adapters.workspace = true
openlet-core.workspace = true
openlet-plugin-api.workspace = true
openlet-plugin-registry.workspace = true
openlet-plugin-core-agents.workspace = true
openlet-protocol.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
openlet-plugin-test-quota-stub.workspace = true
tempfile.workspace = true
rust_decimal.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
