[package]
name = "openlet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "openlet-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["json", "tokio", "http1", "http2", "macros", "query", "multipart"] }
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
dotenvy.workspace = true
futures.workspace = true
openlet-adapters.workspace = true
openlet-core.workspace = true
openlet-plugin-api.workspace = true
openlet-plugin-registry.workspace = true
openlet-plugin-core-agents.workspace = true
openlet-protocol.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
regex.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors", "limit"] }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

# Phase 3 — re-export `infer` so the multipart route can content-sniff
# without depending on `image::guess_format` (single canonical source).
infer = "0.16"

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
openlet-plugin-test-quota-stub.workspace = true
openlet-test-mock-provider = { path = "../openlet-test-mock-provider" }
tempfile.workspace = true
rust_decimal.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
rstest.workspace = true
proptest.workspace = true
wiremock.workspace = true
