[package]
name = "leti-plugin-core-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
leti-core.workspace = true
leti-plugin-api.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
blake3.workspace = true
rust_decimal.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
